[gd_scene load_steps=17 format=3 uid="uid://c572cdinyuwrd"]

[ext_resource type="Script" path="res://source/scripts/play_state.gd" id="1_hqvdp"]
[ext_resource type="Texture2D" uid="uid://dve8vqj2hvbn0" path="res://assets/backgrounds/background-1.png" id="2_4dc4u"]
[ext_resource type="Texture2D" uid="uid://drisw86hb5du7" path="res://assets/backgrounds/foreground-1.png" id="3_b0pl6"]
[ext_resource type="PackedScene" uid="uid://itniewpprdwf" path="res://source/board.tscn" id="3_nh0x8"]
[ext_resource type="Texture2D" uid="uid://bxvbt63obr7j1" path="res://assets/UI/Return_Button_Frames.png" id="4_fvdxq"]
[ext_resource type="Texture2D" uid="uid://bqxd4alrxfhtv" path="res://assets/UI/Retry_Button_Frames.png" id="5_oa54a"]
[ext_resource type="Texture2D" uid="uid://bwlaom8gjjk4f" path="res://assets/UI/Next_Button_Frames.png" id="6_nmqm1"]
[ext_resource type="Theme" uid="uid://docpmippif7jn" path="res://source/resources/PlayStateText.tres" id="8_56ptb"]
[ext_resource type="Script" path="res://source/scripts/current_level.gd" id="9_jq1ci"]
[ext_resource type="PackedScene" uid="uid://d1dm0gb8pvhv7" path="res://source/star_feed_back.tscn" id="9_olsdx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6qk5"]
atlas = ExtResource("4_fvdxq")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhwgr"]
atlas = ExtResource("4_fvdxq")
region = Rect2(298, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_soy2p"]
atlas = ExtResource("5_oa54a")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_7il42"]
atlas = ExtResource("5_oa54a")
region = Rect2(298, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea68y"]
atlas = ExtResource("6_nmqm1")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_txsv1"]
atlas = ExtResource("6_nmqm1")
region = Rect2(298, 0, 298, 0)

[node name="PlayState" type="Node2D"]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 720.0
script = ExtResource("1_hqvdp")

[node name="background" type="TextureRect" parent="Container"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 720.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4dc4u")

[node name="Board" parent="Container" instance=ExtResource("3_nh0x8")]
offset_left = 40.0
offset_top = 40.0
offset_right = 390.0
offset_bottom = 390.0

[node name="foreground" type="TextureRect" parent="Container"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 2400.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = ExtResource("3_b0pl6")

[node name="ReturnButton" type="TextureButton" parent="Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 625.0
offset_right = 98.0
offset_bottom = 775.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture_normal = SubResource("AtlasTexture_t6qk5")
texture_hover = SubResource("AtlasTexture_dhwgr")
stretch_mode = 3

[node name="RetryButton" type="TextureButton" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -119.0
offset_right = 127.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.333, 0.333)
texture_normal = SubResource("AtlasTexture_soy2p")
texture_hover = SubResource("AtlasTexture_7il42")

[node name="NextButton" type="TextureButton" parent="Container"]
layout_mode = 0
offset_left = 230.0
offset_top = 240.0
offset_right = 528.0
offset_bottom = 390.0
scale = Vector2(0.333, 0.333)
texture_normal = SubResource("AtlasTexture_ea68y")
texture_hover = SubResource("AtlasTexture_txsv1")
stretch_mode = 0

[node name="CurrentLevel" type="Label" parent="Container"]
layout_mode = 0
offset_left = 20.0
offset_top = 515.0
offset_right = 160.0
offset_bottom = 605.0
theme = ExtResource("8_56ptb")
text = "Level
1"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_jq1ci")

[node name="CurrentScore" type="Label" parent="Container"]
layout_mode = 0
offset_left = 126.0
offset_top = 515.0
offset_right = 300.0
offset_bottom = 605.0
theme = ExtResource("8_56ptb")
text = "Score
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HiScore" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 515.0
offset_right = -40.0
offset_bottom = 605.0
grow_horizontal = 0
theme = ExtResource("8_56ptb")
text = "My HiScore
99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoneBanner" type="Label" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -367.0
offset_top = 309.0
offset_right = -175.0
offset_bottom = 396.0
grow_horizontal = 0
theme = ExtResource("8_56ptb")
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickShield" type="Control" parent="Container"]
anchors_preset = 0
offset_left = 6.0
offset_top = 388.0
offset_right = 477.0
offset_bottom = 452.0

[node name="ClickShield1" type="Control" parent="Container/ClickShield"]
layout_mode = 3
anchors_preset = 0
offset_left = 389.0
offset_top = -386.0
offset_right = 473.0
offset_bottom = 76.0

[node name="StarFeedBack" parent="Container" instance=ExtResource("9_olsdx")]
offset_left = 242.0
offset_top = 625.0
offset_right = 1009.0
offset_bottom = 895.0
scale = Vector2(0.286, 0.286)

[connection signal="pressed" from="Container/ReturnButton" to="Container" method="_on_menu_button_pressed"]
[connection signal="pressed" from="Container/RetryButton" to="Container" method="_on_retry_button_pressed"]
[connection signal="pressed" from="Container/NextButton" to="Container" method="_on_next_button_pressed"]
